--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) 2013, The Linux Foundation. All rights reserved.
-     Not a Contribution, Apache license notifications and license are retained
-     for attribution purposes only.
+Not a Contribution, Apache license notifications and license are retained
+for attribution purposes only.
 
-     Copyright (C) 2013 The Android Open Source Project
+Copyright (C) 2013 The Android Open Source Project
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+http://www.apache.org/licenses/LICENSE-2.0
 
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,52 +24,13 @@
         coreApp="true" >
 
     <!--
-        The real code for InCallUI is included in Dialer. This APK only exists
-        to ensure that the com.android.incallui process is marked as persistent
-        since less powerful devices may not be able to initiate the process
-        in time when the process is killed and an incoming call is received.
-    -->
+The real code for InCallUI is included in Dialer. This APK only exists
+to ensure that the com.android.incallui process is marked as persistent
+since less powerful devices may not be able to initiate the process
+in time when the process is killed and an incoming call is received.
+-->
     <application
-            android:name="InCallApp"
-            android:label="@string/inCallLabel"
-            android:supportsRtl="true">
-
-        <!-- Main in-call UI activity.  This is never launched directly
-             from outside the phone app; instead, it's either launched by
-             the OutgoingCallBroadcaster (for outgoing calls), or as the
-             fullScreenIntent of a notification (for incoming calls.) -->
-        <activity android:name=".InCallActivity"
-                  android:theme="@style/Theme.InCallScreen"
-                  android:label="@string/inCallLabel"
-                  android:excludeFromRecents="true"
-                  android:launchMode="singleInstance"
-                  android:screenOrientation="nosensor"
-                  android:configChanges="keyboardHidden"
-                  android:exported="false">
-        </activity>
-
-        <activity android:name=".InCallCardActivity"
-                  android:label="@string/inCallLabel"
-                  android:excludeFromRecents="true"
-                  android:launchMode="singleInstance"
-                  android:configChanges="keyboardHidden"
-                  android:exported="false">
-        </activity>
-
-        <service android:name="CallHandlerService">
-            <intent-filter>
-                <action android:name="com.android.services.telephony.common.ICallHandlerService" />
-            </intent-filter>
-        </service>
-
-        <!-- BroadcastReceiver for receiving Intents from Notification mechanism. -->
-        <receiver android:name="InCallApp$NotificationBroadcastReceiver" exported="false">
-            <intent-filter>
-                <action android:name="com.android.incallui.ACTION_HANG_UP_ONGOING_CALL" />
-                <action android:name="com.android.incallui.ACTION_DISMISS_ICOMING_CALL" />
-                <action android:name="com.android.incallui.ACTION_ANSWER_ICOMING_CALL" />
-            </intent-filter>
-        </receiver>
-
-    </application>
+        android:persistent="true"
+        android:hasCode="false"
+        />
 </manifest>
